# SDL-Snake

./: .gitignore  CMakeLists.txt  README.md
src/: bitset.c  bitset.h  config.h  direction.c  direction.h  pixelgrid.c  pixelgrid.h  ringbuf.c  ringbuf.h  snake.c
